[package]
name = "main-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.0-pre1", features = ["full"] }
tokio = { version = "1.34", features = ["full"] }
van-colleague = { path = "../van-colleague/" }
