[package]
name = "main-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.0", features = ["full"] }
device = { git = "https://github.com/vancolleague/device.git" }
tokio = { version = "1.36.0", features = ["full"] }
van-colleague = { git = "https://github.com/vancolleague/van-colleague.git" }
#van-colleague = { path = "../van-colleague/" }
